--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.bootcss.com/echarts/3.7.1/echarts.min.js"></script>
-  <title>益企学</title>
+  <title>益画像</title>
 </head>
 
 <body>
